--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h2>Proyectos</h2>
         <ul>
           <li>
-            <h3>Calculadora Uber</h3>
-            <p>Analisa tus ganancias y gastos</p>
+            <h3>Tienda AvilZ</h3>
+            <p>Productos de tecnologia</p>
           </li>
           <li>
             <h3>Gestion de alquiler</h3>
