--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>AvilesDev</title>
+    <title>AndresAviles</title>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="UTF-8" />
@@ -10,48 +10,42 @@
   </head>
   <body>
     <header>
-      <h1>AvilesDev</h1>
-      <nav>
-        <ul>
-          <li><a href="#about">Acerca de mí</a></li>
-          <li><a href="#projects">Proyectos</a></li>
-          <li><a href="#contact">Contacto</a></li>
-        </ul>
-      </nav>
-    </header>
+      <div class="header-container">
+          <img src="/img/img_1_1722393794169.jpg" alt="Profile Photo" class="profile-photo">
+          <h2>Andrés Avilés</h2>
+      </div>
+  </header>
     <main>
       <section id="about">
-        <h2>Acerca de mí</h2>
+        <h1></h1>
         <p>
-          Mi nombre es Andres Aviles Rodriguez y soy un desarrollador web. He
-          trabajado en [proyectos relevantes] y estoy enfocado en [tus áreas de
-          interés].
+          Soy Andrés Avilés, Ingeniero en Software apasionado por la tecnología y la innovación. 
+          En este espacio, te invito a descubrir mis diversas facetas profesionales y los servicios que ofrezco.
+        </p>
+        <p>
+          Navega por mi sitio y descubre cómo puedo ayudarte a alcanzar tus objetivos tecnológicos y a vivir aventuras inolvidables. ¡Gracias por visitar y espero poder colaborar contigo pronto!
         </p>
       </section>
-      <section id="projects">
-        <h2>Proyectos</h2>
-        <ul>
-          <li>
-            <h3>Tienda AvilZ</h3>
-            <p>Productos de tecnologia</p>
-          </li>
-          <li>
-            <h3>Gestion de alquiler</h3>
-            <p>Breve descripción del proyecto 2</p>
-          </li>
-        </ul>
-      </section>
-      <section id="contact">
-        <h2>Contacto</h2>
-        <form id="contact-form">
-          <label for="name">Nombre:</label>
-          <input type="text" id="name" name="name" required />
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <label for="message">Mensaje:</label>
-          <textarea id="message" name="message" required></textarea>
-          <input type="submit" value="Enviar" />
-        </form>
+      <section id="services">
+        <h2>Servicios</h2>
+        <div class="card">
+          <img src="/img/smartphone-libreta-auriculares_23-2148037024.jpg" alt="Tienda de Productos Tecnológicos">
+          <h3>Tienda AvilZ</h3>
+          <p>Tienda de Productos Tecnológicos: Explora una selección de productos tecnológicos diseñados para mejorar tu día a día y mantenerte a la vanguardia de la innovación.</p>
+          <a href=""><button class="card-button">Comprar</button></a>
+        </div>
+      <div class="card">
+          <img src="images/web-dev.jpg" alt="Desarrollo de Webs y Software">
+          <h3>AvilDev</h3>
+          <p>Desarrollo de Webs y Software: Conoce mi empresa de desarrollo, donde transformamos ideas en soluciones digitales. Desde sitios web impresionantes hasta aplicaciones de software robustas, estamos aquí para hacer realidad tus proyectos.</p>
+          <a href=""><button class="card-button">Conocer más</button></a>
+        </div>
+      <div class="card">
+          <img src="images/travel-companion.jpg" alt="Servicio de Travel Companion">
+          <h3>Travel Companion</h3>
+          <p>Servicio de Travel Companion: Descubre mi servicio de Travel Companion, donde combino mi pasión por los viajes y la tecnología para ofrecerte experiencias de viaje únicas y personalizadas.</p>
+          <a href=""><button class="card-button">Contratar</button></a>
+        </div>
       </section>
     </main>
     <footer>
