agrgando info e img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section id="about">
         <h1></h1>
         <p>
-          Soy Andrés Avilés, Ingeniero en Software apasionado por la tecnología y la innovación. 
+          Hola! Soy Ingeniero en Software apasionado por la tecnología y la innovación. 
           En este espacio, te invito a descubrir mis diversas facetas profesionales y los servicios que ofrezco.
         </p>
         <p>
