agrgando info e img

--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
   </header>
     <main>
       <section id="about">
-        <h1></h1>
-        <p>
+        <h1>
           Hola! Soy Ingeniero en Software apasionado por la tecnología y la innovación. 
-          En este espacio, te invito a descubrir mis diversas facetas profesionales y los servicios que ofrezco.
-        </p>
-        <p>
-          Navega por mi sitio y descubre cómo puedo ayudarte a alcanzar tus objetivos tecnológicos y a vivir aventuras inolvidables. ¡Gracias por visitar y espero poder colaborar contigo pronto!
-        </p>
+          Descubre mis diversas facetas profesionales y los servicios que ofrezco.
+        </h1>
+        
       </section>
       <section id="services">
         <h2>Conoce mis proyectos</h2>
