--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="card">
             <img class="card-img" src="/img/smartphone-libreta-auriculares_23-2148037024.jpg" alt="Tienda de Productos Tecnológicos">
             <h3 class="card-title">Tienda AvilZ</h3>
-            <p class="card-text">Tienda de Productos Tecnológicos: Explora una selección de productos tecnológicos diseñados para mejorar tu día a día y mantenerte a la vanguardia de la innovación.</ class="card-text">
+            <p class="card-text">Tienda de Productos Tecnológicos: Explora una selección de productos tecnológicos diseñados para mejorar tu día a día y mantenerte a la vanguardia de la innovación.</ class="card-text"</p>
             <a href=""><button class="card-button">Comprar</button></a>
           </div>
           
