agregandocontactos en header y estilos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>AndresAviles</title>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,6 +15,12 @@
           <img src="/img/img_1_1722393794169.jpg" alt="Profile Photo" class="profile-photo">
           <h2>Andrés Avilés</h2>
       </div>
+      <section class="buttons">
+        <a href="tel:+50662412024" class="fa fa-phone"></a>
+        <a href="https://www.linkedin.com/in/josé-andrés-avilés-rodríguez-66621215a/" class="fa fa-linkedin"></a>
+        <a href="https://wa.me/50662412024?text=Hola%20Andres%20Aviles,%20me%20gustaría%20discutir%20una%20oportunidad%20de%20negocios%20contigo" class="fa fa-whatsapp"></a>
+        <a href="https://github.com/avilDev-cr" class="fa fa-github"></a>
+      </section>
   </header>
     <main>
       <section id="about">
