agregandocontactos en header y estilos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="header-container">
           <img src="/img/img_1_1722393794169.jpg" alt="Profile Photo" class="profile-photo">
-          <h2>Andrés Avilés</h2>
+          <h2 class="Title-name">Andrés Avilés</h2>
       </div>
       <section class="buttons">
         <a href="tel:+50662412024" class="fa fa-phone"></a>
