--- a/index.html
+++ b/index.html
@@ -56,19 +56,32 @@
     </main>
     <footer>
       <div class="footer-container">
-        <div class="footer-content">
-          <h3>Andrés Avilés - AvilesDev</h3>
-          <p>Ingeniero en Software | Desarrollador Web | Innovador Tecnológico</p>
-          <p>Contacto: <a href="mailto:andresaviles27@icloud.com">andresaviles27@icloud.com</a></p>
-        </div>
-        <div class="footer-social">
-          <a href="https://www.linkedin.com/in/andresaviles" target="_blank">LinkedIn</a> |
-          <a href="https://twitter.com/andresaviles" target="_blank">Whatsapp</a>
-        </div>
-        <div class="footer-copyright">
-          <p>&copy; 2024 AvilesDev. Todos los derechos reservados.</p>
-        </div>
+          <div class="footer-column">
+              <h3>Sobre Mí</h3>
+              <p>Soy Andrés Avilés, un ingeniero en software apasionado por la tecnología y la innovación. Ofrezco servicios de desarrollo de software, sitios web, y transporte exclusivo.</p>
+          </div>
+          <div class="footer-column">
+              <h3>Enlaces Rápidos</h3>
+              <ul>
+                  <li><a href="#services">Servicios</a></li>
+                  <li><a href="#contact">Contacto</a></li>
+                  <li><a href="#blog">Blog</a></li>
+              </ul>
+          </div>
+
+          <div class="footer-column">
+              <h3>Contáctame</h3>
+              <a href="tel:+50662412024" class="fa fa-phone"></a>
+              <a href="https://www.linkedin.com/in/josé-andrés-avilés-rodríguez-66621215a/" class="fa fa-linkedin"></a>
+              <a href="https://wa.me/50662412024?text=Hola%20Andres%20Aviles,%20me%20gustaría%20discutir%20una%20oportunidad%20de%20negocios%20contigo" class="fa fa-whatsapp"></a>
+              <a href="https://github.com/avilDev-cr" class="fa fa-github"></a>
+ 
+          </div>
       </div>
-    </footer>
+      <div class="footer-bottom">
+          <p>&copy; 2024 Andrés Avilés. Todos los derechos reservados.</p>
+      </div>
+  </footer>
+  
   </body>
 </html>
