cambiando formato de imagenes jpg a webp

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="header-container">
-          <img src="/img/img_1_1722393794169.jpg" alt="Profile Photo" class="profile-photo">
+          <img src="/img/img_1_1722393794169.webp" alt="Profile Photo" class="profile-photo">
           <h2 class="Title-name">Andrés Avilés</h2>
       </div>
       <section class="buttons">
@@ -42,21 +42,21 @@
       <section id="services">
         <h2>Conoce mis proyectos</h2>
         <div class="card">
-          <img class="card-img" src="/img/man-doing-software-quality-assurance-using-tablet-reading-source-code.jpg" alt="Desarrollo de Webs y Software">
+          <img class="card-img" src="/img/man-doing-software-quality-assurance-using-tablet-reading-source-code.webp" alt="Desarrollo de Webs y Software">
           <h3 class="card-title">AvilDev</h3>
           <p class="card-text">Desarrollo de Webs y Software: Conoce mi empresa de desarrollo, donde transformamos ideas en soluciones digitales. Desde sitios web impresionantes hasta aplicaciones de software robustas, estamos aquí para hacer realidad tus proyectos.</p>
           <a href=""><button type="button" class="btn btn-primary btn-lg">Conocer más</button></a>
         </div>
 
           <div class="card">
-            <img class="card-img" src="/img/smartphone-libreta-auriculares_23-2148037024.jpg" alt="Tienda de Productos Tecnológicos">
+            <img class="card-img" src="/img/smartphone-libreta-auriculares_23-2148037024.webp" alt="Tienda de Productos Tecnológicos">
             <h3 class="card-title">Tienda AvilZ</h3>
             <p class="card-text">Tienda de Productos Tecnológicos: Explora una selección de productos tecnológicos diseñados para mejorar tu día a día y mantenerte a la vanguardia de la innovación.</p>
             <a href=""><button type="button" class="btn btn-primary btn-lg">Comprar</button></a>
           </div>
           
           <div class="card">
-            <img class="card-img" src="/img/driver-dressed-elegant-costume.jpg" alt="Servicio de Travel Companion">
+            <img class="card-img" src="/img/driver-dressed-elegant-costume.webp" alt="Servicio de Travel Companion">
             <h3 class="card-title">Exclusive Driver Service</h3>
             <p class="card-text">Ofrecemos soluciones de transporte de primera clase, personalizadas a tus necesidades específicas. Ya sea que asistas a una importante reunión de negocios, necesites traslados confiables al aeropuerto, o desees explorar la ciudad con comodidad y estilo, nuestros chóferes profesionales están a tu disposición.</p>
             <a href="https://wa.me/50662412024?text=Hola%20Andr%C3%A9s%20Avil%C3%A9s,%20me%20gustar%C3%ADa%20obtener%20m%C3%A1s%20informaci%C3%B3n%20sobre%20el%20servicio%20de%20conductor.%20%C2%BFPodr%C3%ADas%20ayudarme%20a%20coordinar%20un%20viaje?%20Gracias."><button type="button" class="btn btn-primary btn-lg">Agendar</button></a>
