--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="header-container">
           <img src="/img/img_1_1722393794169.webp" alt="Profile Photo" class="profile-photo">
           <h2 class="Title-name">Andrés Avilés</h2>
+          <h3 class="profesion">Ingeniero en Software y Full Stack</h3>
       </div>
       <section class="buttons">
         <a href="tel:+50662412024" class="fa fa-phone"></a>
@@ -37,7 +38,7 @@
       </section>
   </header>
     <main>
-      <section id="about">
+      <section class="about" id="about">
         <h1>
           Ingeniero en Software y Desarrollador Web apasionado por la tecnología y la innovación. 
           Actualemente trabajo en mi proyecto AvilDev
